--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="page" id="page2">
         <div class="photo-container">
             <!-- Use uma imagem placeholder ou URL completa em vez de caminho local -->
-            <img src="/api/placeholder/360/360" alt="Personagem">
+            <img src="snoop.html.jpg" alt="Personagem">
         </div>
         <h2>Você gostaria de ouvir nossa música?</h2>
         <div class="options">
@@ -45,7 +45,7 @@
     <div class="page" id="page4">
         <div class="photo-container">
             <!-- Use uma imagem placeholder ou URL completa em vez de caminho local -->
-            <img src="/api/placeholder/450/300" alt="Foto do casal">
+            <img src="casalpint.jpg" alt="Foto do casal">
         </div>
         <p>
             Cada momento ao seu lado é especial. Você ilumina meus dias e faz meu coração bater mais forte. Obrigado(a) por compartilhar sua vida comigo e por me fazer tão feliz. Te amo infinitamente!
@@ -57,7 +57,7 @@
     <div class="page" id="page5">
         <div class="photo-container">
             <!-- Use uma imagem placeholder ou URL completa em vez de caminho local -->
-            <img src="/api/placeholder/360/360" alt="Personagem">
+            <img src="snoop2.html.jpg" alt="Personagem">
         </div>
         <h2>Você gostaria de ver a quanto tempo estamos juntos?</h2>
         <div class="options">
